src/parser/peg-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(p) {
          return p;
        },
      peg$c1 = function(body) {
          return optionalList(body);
        },
      peg$c2 = function(head, tail) {
          return buildList(head, tail, 1);
        },
      peg$c3 = peg$otherExpectation("block"),
      peg$c4 = "{",
      peg$c5 = peg$literalExpectation("{", false),
      peg$c6 = "}",
      peg$c7 = peg$literalExpectation("}", false),
      peg$c8 = function(body) {
          return createBlockExpression(optionalList(extractOptional(body, 0)));
        },
      peg$c9 = peg$otherExpectation("simple expression"),
      peg$c10 = function(e) {
          return createSimpleExpression(e);
        },
      peg$c11 = peg$otherExpectation("expression"),
      peg$c12 = function(e) {
          return e;
        },
      peg$c13 = peg$otherExpectation("assignment"),
      peg$c14 = "=",
      peg$c15 = peg$literalExpectation("=", false),
      peg$c16 = function(l, e) {
          return createAssignmentExpression(createContext(location(), options), l, '=', e);
        },
      peg$c17 = function(l, o, e) {
          return createAssignmentExpression(createContext(location(), options), l, o, e);
        },
      peg$c18 = peg$otherExpectation("assignment operator"),
      peg$c19 = "+=",
      peg$c20 = peg$literalExpectation("+=", false),
      peg$c21 = "-=",
      peg$c22 = peg$literalExpectation("-=", false),
      peg$c23 = "*=",
      peg$c24 = peg$literalExpectation("*=", false),
      peg$c25 = "/=",
      peg$c26 = peg$literalExpectation("/=", false),
      peg$c27 = "%=",
      peg$c28 = peg$literalExpectation("%=", false),
      peg$c29 = peg$otherExpectation("conditional"),
      peg$c30 = "?",
      peg$c31 = peg$literalExpectation("?", false),
      peg$c32 = ":",
      peg$c33 = peg$literalExpectation(":", false),
      peg$c34 = function(test, consequent, alternate) {
          return createConditionalExpression(createContext(location(), options), test, consequent, alternate);
        },
      peg$c35 = peg$otherExpectation("logical or expression"),
      peg$c36 = function(head, tail) {
          return composeBinaryExpression(createContext(location(), options), head, tail);
        },
      peg$c37 = peg$otherExpectation("logical and expression"),
      peg$c38 = peg$otherExpectation("equality expression"),
      peg$c39 = peg$otherExpectation("equality operator"),
      peg$c40 = "==",
      peg$c41 = peg$literalExpectation("==", false),
      peg$c42 = "!=",
      peg$c43 = peg$literalExpectation("!=", false),
      peg$c44 = peg$otherExpectation("relational expression"),
      peg$c45 = peg$otherExpectation("relational operator"),
      peg$c46 = "<=",
      peg$c47 = peg$literalExpectation("<=", false),
      peg$c48 = ">=",
      peg$c49 = peg$literalExpectation(">=", false),
      peg$c50 = "<",
      peg$c51 = peg$literalExpectation("<", false),
      peg$c52 = ">",
      peg$c53 = peg$literalExpectation(">", false),
      peg$c54 = peg$otherExpectation("addition or subtraction operator"),
      peg$c55 = "+",
      peg$c56 = peg$literalExpectation("+", false),
      peg$c57 = "-",
      peg$c58 = peg$literalExpectation("-", false),
      peg$c59 = peg$otherExpectation("multiply, divide, or modulo operator"),
      peg$c60 = "*",
      peg$c61 = peg$literalExpectation("*", false),
      peg$c62 = "/",
      peg$c63 = peg$literalExpectation("/", false),
      peg$c64 = "%",
      peg$c65 = peg$literalExpectation("%", false),
      peg$c66 = peg$otherExpectation("unary expression"),
      peg$c67 = function(operator, argument) {
          return createUnaryExpression(createContext(location(), options), operator, argument);
        },
      peg$c68 = peg$otherExpectation("unary operator"),
      peg$c69 = peg$otherExpectation("left-hand side"),
      peg$c70 = peg$otherExpectation("call expression"),
      peg$c71 = function(callee, args) {
            return createCallExpression(createContext(location(), options), callee, args);
          },
      peg$c72 = function(head, args) {
            return { type: 'call', args }
          },
      peg$c73 = "[",
      peg$c74 = peg$literalExpectation("[", false),
      peg$c75 = "]",
      peg$c76 = peg$literalExpectation("]", false),
      peg$c77 = function(head, property) {
            return { 'type': 'member', property };
          },
      peg$c78 = ".",
      peg$c79 = peg$literalExpectation(".", false),
      peg$c80 = function(head, property) {
            return { 'type': 'member', property: createStringLiteral(createContext(location(), options), property) };
          },
      peg$c81 = function(head, tail) {
          return tail.reduce((result, element) => {
            if (element.type === 'call') {
              return createCallExpression(createContext(location(), options), result, element.args);
            } else {
              return createObjectPropertyExpression(createContext(location(), options), result, element.property);
            }
          }, head);
        },
      peg$c82 = peg$otherExpectation("arguments"),
      peg$c83 = "(",
      peg$c84 = peg$literalExpectation("(", false),
      peg$c85 = ")",
      peg$c86 = peg$literalExpectation(")", false),
      peg$c87 = function(args) {
          return args ? args[0] : [];
        },
      peg$c88 = function(head, tail) {
          return composeList(head, extractList(tail, 3));
        },
      peg$c89 = peg$otherExpectation("member expression"),
      peg$c90 = function(head, property) {
            return { property };
          },
      peg$c91 = function(head, property) {
            return { property: createStringLiteral(createContext(location(), options), property) };
          },
      peg$c92 = function(head, tail) {
          return tail.reduce((result, element) => createObjectPropertyExpression(createContext(location(), options), result, element.property), head);
        },
      peg$c93 = peg$otherExpectation("function expression"),
      peg$c94 = "=>",
      peg$c95 = peg$literalExpectation("=>", false),
      peg$c96 = function(params, body) {
          return createFunctionExpression(createContext(location(), options), params ? params[0] : [], body);
        },
      peg$c97 = peg$otherExpectation("formal parameter list"),
      peg$c98 = peg$otherExpectation("function body"),
      peg$c99 = function(body) {
          return createBlockExpression(optionalList(body));
        },
      peg$c100 = peg$otherExpectation("table expression"),
      peg$c101 = function(params, entries) {
          return createTableExpression(createContext(location(), options), params ? params[0] : [], entries);
        },
      peg$c102 = function(entries) {
          return createTableExpression(createContext(location(), options), [], entries);
        },
      peg$c103 = peg$otherExpectation("table entries"),
      peg$c104 = function(head, tail) {
          return composeList(head, extractList(tail, 1));
        },
      peg$c105 = peg$otherExpectation("simple table entry"),
      peg$c106 = function(spread) {
          return createSpreadTableEntryExpression(spread);
        },
      peg$c107 = function(body) {
          return createSimpleTableEntryExpression(body);
        },
      peg$c108 = peg$otherExpectation("table entry"),
      peg$c109 = function(selector, body) {
          return createTableEntryExpression(selector, body);
        },
      peg$c110 = peg$otherExpectation("table entry selector"),
      peg$c111 = function(start, end) {
          return createRangeTableSelector(start, end);
        },
      peg$c112 = function(roll) {
          return createExactTableSelector(roll);
        },
      peg$c113 = peg$otherExpectation("table entry body"),
      peg$c114 = peg$otherExpectation("if expression"),
      peg$c115 = function(e, ifBlock, elseBlock) {
          return createIfExpression(createContext(location(), options), e, ifBlock, elseBlock);
        },
      peg$c116 = function(e, ifBlock) {
          return createIfExpression(createContext(location(), options), e, ifBlock);
        },
      peg$c117 = peg$otherExpectation("spread"),
      peg$c118 = "...",
      peg$c119 = peg$literalExpectation("...", false),
      peg$c120 = function(e) {
          return createSpreadExpression(createContext(location(), options), e);
        },
      peg$c121 = function(i) {
          return createVariableExpression(createContext(location(), options), i);
        },
      peg$c122 = peg$otherExpectation("undefined"),
      peg$c123 = function() {
          return createUndefinedLiteral(createContext(location(), options));
        },
      peg$c124 = peg$otherExpectation("boolean"),
      peg$c125 = function() {
          return createBooleanLiteral(createContext(location(), options), true);
        },
      peg$c126 = function() {
          return createBooleanLiteral(createContext(location(), options), false);
        },
      peg$c127 = peg$otherExpectation("array"),
      peg$c128 = function(e) {
          return createArrayLiteral(createContext(location(), options), e);
        },
      peg$c129 = function() {
          return createArrayLiteral(createContext(location(), options), []);
        },
      peg$c130 = function(e) {
          return [e];
        },
      peg$c131 = peg$otherExpectation("object"),
      peg$c132 = function(p) {
          return createObjectLiteral(createContext(location(), options), p);
        },
      peg$c133 = function() {
          return createObjectLiteral(createContext(location(), options), []);
        },
      peg$c134 = function(head, tail) {
          return composeList(head, tail);
        },
      peg$c135 = function(p) {
          return [p];
        },
      peg$c136 = peg$otherExpectation(","),
      peg$c137 = ",",
      peg$c138 = peg$literalExpectation(",", false),
      peg$c139 = function(key, value) {
          return createObjectLiteralPropertyExpression(createContext(location(), options), key, value);
        },
      peg$c140 = peg$otherExpectation("dice"),
      peg$c141 = "d",
      peg$c142 = peg$literalExpectation("d", false),
      peg$c143 = "D",
      peg$c144 = peg$literalExpectation("D", false),
      peg$c145 = function(count, die, suffix) {
          return createDiceLiteral(createContext(location(), options), count, die, suffix);
        },
      peg$c146 = function(die, suffix) {
          return createDiceLiteral(createContext(location(), options), 1, die, suffix);
        },
      peg$c147 = function(operator, specifier, count) {
          return createDiceLiteralSuffix(operator, specifier.toLowerCase(), count);
        },
      peg$c148 = "l",
      peg$c149 = peg$literalExpectation("l", false),
      peg$c150 = "L",
      peg$c151 = peg$literalExpectation("L", false),
      peg$c152 = "h",
      peg$c153 = peg$literalExpectation("h", false),
      peg$c154 = "H",
      peg$c155 = peg$literalExpectation("H", false),
      peg$c156 = peg$otherExpectation("end of line"),
      peg$c157 = "\n",
      peg$c158 = peg$literalExpectation("\n", false),
      peg$c159 = "\r\n",
      peg$c160 = peg$literalExpectation("\r\n", false),
      peg$c161 = "\r",
      peg$c162 = peg$literalExpectation("\r", false),
      peg$c163 = peg$otherExpectation("whitespace"),
      peg$c164 = /^[ \t\n\r]/,
      peg$c165 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c166 = peg$otherExpectation("comment"),
      peg$c167 = "#",
      peg$c168 = peg$literalExpectation("#", false),
      peg$c169 = peg$anyExpectation(),
      peg$c170 = peg$otherExpectation("integer"),
      peg$c171 = function(i) {
          return createNumberLiteral(createContext(location(), options), i);
        },
      peg$c172 = "0",
      peg$c173 = peg$literalExpectation("0", false),
      peg$c174 = function() {
          return 0;
        },
      peg$c175 = function(i) {
          return parseInt(text());
        },
      peg$c176 = function() {
          return parseInt(text());
        },
      peg$c177 = /^[1-9]/,
      peg$c178 = peg$classExpectation([["1", "9"]], false, false),
      peg$c179 = /^[0-9]/,
      peg$c180 = peg$classExpectation([["0", "9"]], false, false),
      peg$c181 = peg$otherExpectation("identifier"),
      peg$c182 = function(head, tail) {
          return head + tail.join('');
        },
      peg$c183 = /^[_a-zA-Z]/,
      peg$c184 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false),
      peg$c185 = peg$otherExpectation("string"),
      peg$c186 = function(s) {
          return createStringLiteral(createContext(location(), options), s);
        },
      peg$c187 = "\"",
      peg$c188 = peg$literalExpectation("\"", false),
      peg$c189 = function(s) {
          return s.join('');
        },
      peg$c190 = "'",
      peg$c191 = peg$literalExpectation("'", false),
      peg$c192 = function() {
          return text();
        },
      peg$c193 = "true",
      peg$c194 = peg$literalExpectation("true", false),
      peg$c195 = "false",
      peg$c196 = peg$literalExpectation("false", false),
      peg$c197 = "if",
      peg$c198 = peg$literalExpectation("if", false),
      peg$c199 = "else",
      peg$c200 = peg$literalExpectation("else", false),
      peg$c201 = "and",
      peg$c202 = peg$literalExpectation("and", false),
      peg$c203 = "or",
      peg$c204 = peg$literalExpectation("or", false),
      peg$c205 = "not",
      peg$c206 = peg$literalExpectation("not", false),
      peg$c207 = function() { return 'not'; },
      peg$c208 = "table",
      peg$c209 = peg$literalExpectation("table", false),
      peg$c210 = "undefined",
      peg$c211 = peg$literalExpectation("undefined", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    var key    = peg$currPos * 78 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseProgram();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseProgram() {
    var s0, s1;

    var key    = peg$currPos * 78 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseStatements();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseStatements() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 78 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
